<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TobiasApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startText">Connect</string>
    <string name="startText2">Disconnect</string>
    <string name="instructionText">To start playing, please press Connect and Play afterwards. \n Good luck, have fun!</string>
    <string name="playButton">Play</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="credits">Credits</string>
    <string name="LeftArrow">←</string>
    <string name="downArrow">↓</string>
    <string name="rightArrow">→</string>
    <string name="uparrow">↑</string>
    <string name="Credits">This App was created as part of the lecture\n \"Mobile Computing\n und das Internet der Dinge\"</string>
    <string name="creator">by Tobias Hornberger</string>
    <string name="CM">Connection Machine</string>
    <string name="disabledBluetooth">Bluetooth seems to be turned off</string>
    <string name="noDeviceBluetooth">Bluetooth can\'t detect any paired devices</string>
    <string name="noAdapterBluetooth">It seems like there is no Bluetooth installed on this device</string>
    <string name="lives">3 Hitpoints</string>
    <string name="name">One Step from Freedom</string>

</resources>
