<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="388dp"
        android:layout_height="281dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/Framelayout">

        <Button
            android:id="@+id/startButton"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/startText"
            android:layout_gravity="center"
            android:background="@drawable/mybutton2"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            android:id="@+id/playButton"
            android:onClick="play"
            android:enabled="false"
            android:layout_gravity="center_horizontal|bottom" />

        <FrameLayout
            android:layout_width="343dp"
            android:layout_height="93dp"
            android:layout_gravity="center_horizontal|top">

            <TextView
                android:layout_width="271dp"
                android:layout_height="55dp"
                android:text="@string/instructionText"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="8dp"
                android:text="One Step from Freedom"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal|top" />
        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="293dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/subFrame">

        <FrameLayout
            android:layout_width="165dp"
            android:layout_height="150dp"
            android:layout_gravity="right|center_vertical"
            android:paddingRight="15dp">

            <Button
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:text="@string/uparrow"
                android:id="@+id/buttonUp"
                android:onClick="moveUp"
                android:layout_gravity="center_horizontal|top"

                android:background="@drawable/mybutton2"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/rightArrow"
                android:id="@+id/buttonRight"
                android:onClick="moveRight"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/mybutton2" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/LeftArrow"
                android:id="@+id/buttonLeft"
                android:onClick="moveLeft"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/mybutton2" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/downArrow"
                android:onClick="moveDown"
                android:id="@+id/buttonDown"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/mybutton2" />
        </FrameLayout>

        <!--
        <Button
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:background="@drawable/controllcross"
            android:id="@+id/buttonX"
            android:onClick="coordination"
            android:layout_gravity="right|center_vertical" />

            -->


    </FrameLayout>
</LinearLayout>