<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="388dp"
        android:layout_height="281dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/Framelayout">

        <TextView
            android:layout_width="326dp"
            android:layout_height="79dp"
            android:text="@string/instructionText"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/startText"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playButton"
            android:id="@+id/playButton"
            android:onClick="play"
            android:enabled="false"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="293dp"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:id="@+id/creditsButton"
            android:onClick="displayCredits"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left|bottom" />

        <Button
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:background="@drawable/X"
            android:id="@+id/buttonX"
            android:onClick="coordination"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

</LinearLayout>